<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:background="@color/colorFragment"
              android:orientation="vertical"
              android:layout_height="wrap_content">

    <TextView android:id="@+id/companyName"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:paddingBottom="@dimen/normal_padding"
              android:text="@string/cv_experience_company"/>

    <TextView android:id="@+id/startDate"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:paddingBottom="@dimen/normal_padding"
              android:text="@string/cv_experience_start_date"/>

    <TextView android:id="@+id/endDate"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:paddingBottom="@dimen/big_padding"
              android:text="@string/cv_experience_end_date"/>

</LinearLayout>