<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
              android:background="@color/colorFragment"
              android:padding="@dimen/normal_padding"
              android:orientation="vertical"
              android:layout_height="match_parent">


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="@dimen/normal_padding"
            android:orientation="horizontal">

        <TextView android:id="@+id/firstName"
                  android:layout_width="0dp"
                  android:layout_weight="1"
                  android:gravity="right"
                  android:textSize="20sp"
                  android:layout_height="wrap_content"
                  android:text="Konrad"/>

        <TextView android:id="@+id/lastName"
                  android:layout_width="0dp"
                  android:layout_weight="1"
                  android:layout_height="wrap_content"
                  android:textSize="20sp"
                  android:paddingLeft="@dimen/normal_padding"
                  android:text="Tompór"/>

    </LinearLayout>


    <TextView android:id="@+id/position"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:paddingBottom="@dimen/normal_padding"
              android:text="@string/cv_personal_position"/>

    <TextView android:id="@+id/phoneNumber"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:paddingBottom="@dimen/normal_padding"
              android:text="@string/cv_personal_phone_number"/>

    <TextView android:id="@+id/email"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:paddingBottom="@dimen/normal_padding"
              android:text="@string/cv_personal_email"/>

    <TextView android:id="@+id/city"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:paddingBottom="@dimen/normal_padding"
              android:text="@string/cv_personal_city"/>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content">

        <TextView android:id="@+id/linkedin"
                  android:layout_width="wrap_content"
                  android:layout_height="match_parent"
                  android:gravity="center"
                  android:paddingRight="@dimen/normal_padding"
                  android:text="@string/cv_linkedin_label"/>

        <ImageButton
                android:id="@+id/ib_linkedin"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/linkedin"/>

    </LinearLayout>
</LinearLayout>